add todo list exercise

--- a/w6-js/todo/index.html
+++ b/w6-js/todo/index.html
@@ -4,13 +4,11 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Create a to-do list in JavaScript</title>
+        <link rel="stylesheet" href="style.css" />
     </head>
     <body>
         <h1>To do list</h1>
         <!-- input: new to do item -->
-        <label for="add">Add new item</label><br />
-        <input type="text" name="new_item" id="add" />
-        <button>Add</button>
         <!-- output: to do list -->
         <ul></ul>
         <script src="script.js"></script>
