add nasa api example

--- a/w6-js/local-storage/index.html
+++ b/w6-js/local-storage/index.html
@@ -7,11 +7,5 @@
         <title>Get photos via fetch</title>
         <link rel="stylesheet" href="style.css" />
     </head>
-    <body>
-        <h1>Image Gallery</h1>
-        <main>
-            <!-- load photos via fetch and display 10 of them as images with title (as caption and as alt) -->
-        </main>
-        <script src="script.js" defer></script>
-    </body>
+    <body></body>
 </html>
